--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/node": "^16.11.47",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
+    "@types/styled-components": "^5.1.26",
     "axios": "^0.27.2",
     "classname": "^0.0.0",
     "react": "^18.2.0",
@@ -22,6 +23,7 @@
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "styled-components": "^5.3.5",
     "swiper": "^8.3.2",
     "typescript": "^4.7.4",
     "web-vitals": "^2.1.4"
