--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-use": "^17.4.0",
     "styled-components": "^5.3.5",
     "swiper": "^8.3.2",
     "typescript": "^4.7.4",
