--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "postcss": "^8.4.16",
     "prettier": "^2.7.1",
+    "react-video-thumbnail": "^0.1.3",
     "tailwindcss": "^3.1.8"
   }
 }
